fixed dates overlapping issue

--- a/src/styles(post).css
+++ b/src/styles(post).css
@@ -36,8 +36,8 @@
   .post-likes {
     margin: 19px;
     display: inline-block;
-    width: 100px;
-    height: 16px;
+    width: 8rem;
+    height: 1rem;
     border: 4px solid black;
     text-align: center;
     line-height: 3px;
@@ -46,11 +46,11 @@
     padding: 16px;  
 }
   
-  .post-date {
+  .post-date {    
     margin: 19px;
     display: inline-block;
-    width: 220px;
-    height: 16px;
+    width: 17rem;
+    height: 1rem;
     border: 4px solid black;
     text-align: center;
     padding: 15px;
